fixed responsiveness on smaller devices

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -619,7 +619,8 @@ footer {
 
     .first-title h2,
     .second-title h2 {
-        padding: 0;
+        padding: 0 10px;
+        font-size: 140%;
     }
 }
 
